--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="Web-Installer"
 APP_ENV="development"
 APP_KEY=base64:rIobuvfrVtefNWOTQevzG5yidAGkaaT89z6AXz5i2NY=
 APP_DEBUG="true"
-APP_URL="http://localhost/e-commerce/"
+APP_URL="https://marblemurties.com/"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION="mysql"
 DB_HOST="localhost"
 DB_PORT="3306"
-DB_DATABASE="joycomme"
+DB_DATABASE="joycommerce"
 DB_USERNAME="root"
-DB_PASSWORD=StrongP@ssword123
+DB_PASSWORD=Nikul092992NIBP01^98
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
